[package]
name = "ckb-hash-lock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ckb-hash-lock"
path = "src/main.rs"

[dependencies]
ckb-std = "0.15"

[profile.release]
overflow-checks = true
opt-level = "s"       # optimize for binary size
strip = true          # strip debug symbols
lto = true            # link-time optimization