[package]
name = "multisig"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "1.1", features = ["dummy-atomic"] }
blake2b-ref = "0.3"
secp256k1 = { version = "0.30", default-features = false, features = ["recovery", "alloc"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]